Added note on encrypted storage of pdfs in p2p network

--- a/papers/beagle-spec.tex
+++ b/papers/beagle-spec.tex
@@ -104,6 +104,11 @@ distinct advantages; most namely, that the user is not dependant on a silo for
 continued access to their data. The ensures the uptime of Beagle, regardless of
 whether it is under active development or maintainence.
 
+% If we store the papers themselves in the network in an encrypted fashion,
+% we can provide a key only to users who have access through their social network
+% to someone with access (from behind a paywall), while also allowing us to
+% look at the paper content ourselves. Relevant: https://groups.google.com/forum/#!topic/mozilla.dev.pdf-js/VLdszTtqtAk
+
 \section{User Authentication}
 
 Users will register and sign on to the platform using the same process: two step authentication.
